kubernetes-networks/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homework-route
  namespace: homework
spec:
  parentRefs:
    - name: homework-gateway
  hostnames:
    - homework.otus
  rules:
    - matches:
        - path:
            type: Exact
            value: /homepage
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /index.html
      backendRefs:
        - name: homework-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homework-service
          port: 80
